<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_beranda">

    <fragment
        android:id="@+id/nav_beranda"
        android:name="com.example.myapplication.ui.beranda.BerandaFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.example.myapplication.ui.editprofile.EditProfileFragment"
        android:label="@string/menu_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.myapplication.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>