<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FBF7F7"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_logo_launcher_round"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_below="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_background_input"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:hint="@string/masukkan_username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_background_input"
            android:drawableStart="@drawable/ic_pass"
            android:drawablePadding="10dp"
            android:hint="@string/masukkan_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_background_submit"
            android:text="@string/submit"
            android:textColor="#fff" />

    </LinearLayout>

</RelativeLayout>