<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editprofile.EditProfileFragment">

    <TextView
        android:id="@+id/text_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header"
                android:text="Ubah Profile"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@mipmap/ic_logo_launcher_round" />

            <EditText
                android:background="@drawable/ic_background_submit"
                android:inputType="none"
                android:layout_marginLeft="120dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--nama-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="15dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_nama"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/isi_nama"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="Masukkan Nama"
                android:background="@drawable/ic_background_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <!--nip-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_nip"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/isi_nip"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="Masukkan NIP"
                android:background="@drawable/ic_background_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <!--jabatan-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_jabatan"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/isi_jabatan"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="Masukkan Jabatan"
                android:background="@drawable/ic_background_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <!--Area Kerja-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_area_kerja"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/isi_area_kerja"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="Masukkan Area Kerja"
                android:background="@drawable/ic_background_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

                <Button
                    android:layout_below="@+id/profile"
                    android:id="@+id/submit"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/ic_background_riwayat"
                    android:textColor="#fff"
                    android:padding="5dp"
                    android:text="Submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>